lab1/Test/L1-A-12-86.output
Error Type B at Line 3
Error Type A at Line 28
Error Type B at Line 30
Error Type B at Line 33
Error Type A at Line 40
Error Type A at Line 41
Error Type A at Line 46
Error Type A at Line 55
Error Type B at Line 55
Error Type B at Line 79
