lab1/Test/L1-A-12-86.cmm
struct GMkdMr {
  float dQpBCMzUzXtkoUS4B , UhLbIag [ 1416313320 ] 
    q5Xz8rYxMYCBK = LQS && pR9gAonWwDYpB != ZOwZ_fZcZQMljJ7 
    * qNaAGPX8832Tn ( ueo || _nBtlPU9wNhEOmtPBX >= tjKLipqsY3OzBN0vJX 
    - - ! n [ JFxL0fNeUm9HQiQn && QAf87bI0hp_WGRXy_ == 
    ! yIWV [ X9lCqW5baBB_ <= ( xiqdhlA4ssk4urPB7jxZ <= 
    M4Ch8pC2WyoiDN8fC [ Vfy0O1GzH2 = xJDSXSxF72d9SnW / 
    BjOZCQ37cHjIyg4 [ ( rPJV = L < X3fG / ljROSS7Vpo5r 
    [ tudKrmcVlZbMtF4o = G7xVWUxj6R6m || y83R6xa_sQ + 
    O8BcmxxCl1 * ( ! ( CdsKEzYev5tESwd == KBTCbb * - ! 
    ! gqdO5bZ3XiJ [ pk2K2 != - ( ( b1aTMDng1p > CsEKZgTYQvnS 
    * ( Ups8GUdF7v6L == I6 / ( Owi35nWziq6UsNuP || nWMDJ 
    * - ( oEZ31oRMh / SX [ UGJn9BiJHOlYcRmQn / YfQxQv_wodjaAuS3 
    [ nurG00 = ZWjBuQy0Tvq4UqzMgC && UBSIScBGjQBO672CWBhi 
    == q9RN ( caWK , rUYWZoIsLN96pk ) ] / - bhnZAyCxPKr 
    <= ! ( ! vXaYjFA / Zo9EsWvy5ztchzTYFSva * - ( - Tj3g6VcFas 
    . nbvyU67UYJCE ) ) ] || ! Ob9Cxj1O6HRRc9Byo ) / ! 
    xWRzUaHx55I ) + ! ZPzntGk9FiLPMiiGp6 * QAO1gsSUDzXVMN6r 
    ) / a1onO3b1EQf72jk_R ) . AmLHBTM3Gd7XGah && - XkHb1HozTAjJk 
    . CRXyB_9OC ) >= ! IHxs24hQTkkvCEHoJZJr <= qc0PBh82t7kWo7 
    . aCmbuDtYFec8QZh ] ) = - ar3L6q . WYQmHBInFV1 ) + 
    _tJAMRzLo1TXN * tKWvL ] && CF5Dh2Z85oOQbRPuNtac * 
    v9q2jrf5gmHf ) . ByMK6pdD4Qa27i ] . Bi_DnfkX6Tbu . 
    J9fVI4d5 / XqGDiOPJ3GqE0RwpN < u9wo1zlR5 ] . x0yNeBpKVtK9ic 
    ) ] * otfrmL < ( ! 1490519568.883903055 > q5dQTQz 
    ) + 1085376038 . jt0A1LMjePS / ! W ( ) ] ) ;
};
struct zYe2SyUL3xYJH @WMCIk2 
;
struct Dym4nN rwTrc ( int eo8QT54IkUqY6iszO struct 
  wf4r QxA ) {
  int tWz ;
  if ( mFBTHJo5qme9   while ( g08blMX ) {
  }

}
struct {
  int oqEvwbaZjma ;
}W ( ) {
  if ( bjpxUKHDYgkhQEmCwNc ~)   uwLyW5O ;
else   if ( AYmGWZgQJJSRoC9 )   if ( \L5Xy )   while 
    ( NjdNy8w6U7 ) {
  }
else   RddblY5zgdQA ;

else   SvGbVQooan7N ;`


  if ( SUHkZ )   if ( sRJg3obyT )   QT1KUtbY8_oSHQV 
    ;
else   while ( GtMfUHi )   XfKPoqYE6wY ;



~  if ( FU )   if t )   hKrI9dgDRXo1J ;
else   while ( OMv3 )   wP_6omvbdBYVyiR ;


else   if ( KTrKJNMhv5 )   if ( rXPH7K00WPUf )   QIF0bRMtNYIB6hMY6LUn 
    ;
else   if ( oDZU )   pWtqSm1CJTLAL ;
else   J_Z8a ;


else   if ( i3gPPPVOMOa9K )   if ( akUVYbaKzd149 ) 
      L_46dus ;
else   if ( eSOifINspkMpXR )   if ( ZVZDVlA3FdNRUvit 
    )   if ( diLSlkqhzr )   return LiESS0zVpdJjG2XX9 ;
else   k8rgeuOsbsrx ;







}
int 
int Wp , P5a8Kp6QDswI 

;
